update button movement, fix button overlap on content

--- a/style.css
+++ b/style.css
@@ -1,48 +1,50 @@
 body {
-    font-family: sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start; /* Align content at the top of the screen */
-    height: 100vh;
-    margin: 0;
-  }
-  
+  font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start; /* Align content at the top of the screen */
+  height: 100vh;
+  margin: 0;
+}
+
 h1 {
-    text-align: center;
-    font-family: Arial;
+  text-align: center;
+  font-family: Arial;
 }
-  
+
 .top-centered-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-  
+
 .centered-form {
-    text-align: center;
+  text-align: center;
 }
-  
+
 input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
 }
-  
+
 button {
-    background-color: #000;
-    color: #fff;
-    padding: 10px;
-    cursor: default;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+  background-color: #000;
+  color: #fff;
+  padding: 10px;
+  cursor: default;
+  position: absolute;
+  left: 50%;
+  top: 50%;
 }
-  
-  
+
+button:hover {
+  transform: rotate(20deg); 
+}
+
 @media only screen and (max-width: 600px) {
-  input {
-    width: 90%;
-  }
+input {
+  width: 90%;
+}
 }
